# dfxml_cpp

./: .gitignore  Makefile  README.md  codecov.yml
.github/workflows/: continuous-integration-pip.yml  continuous-integration.yml
src/: .gitignore  Makefile.am  Makefile.defs  README_win32.md  bootstrap.sh  configure.ac  cpuid.h  dfxml_configure.m4  dfxml_demo.cpp  dfxml_reader.cpp  dfxml_reader.h  dfxml_writer.h  iblkfind.cpp  testapp_catch2.cpp
